@startuml " Find_Barber uml "

class Booking {
   client
   barber 
   date
   bookingId
   findBookingByClient()
   findBookingByBarber()
}
    
class Client {
    name
    phone
    email
    bookings = Array
    clientId
    book()
}

class Barber {
    name
    address
    experts = Array
    bookings = Array
    barberId

}

Booking o--> Client
Booking o--> Barber
Barber <--> Client

@enduml
